WIp validari inclusiv i1

--- a/src/templates/R/01_cpis.html
+++ b/src/templates/R/01_cpis.html
@@ -1852,7 +1852,6 @@
 
             <!-- CAREGIVER -->
             <h3 class="text-xl mt-10 mb-2 font-semibold bg-gray-100 px-2 py-1 text-gray-700">{{T0441}}</h3>
-            <small class="smallclass">{{T0442}}</small>
 
             <div class="divclass mt-6">
                 <div>
@@ -2766,27 +2765,33 @@
                 <div>
                     <select id="sa5t" name="sa5t" class="selectclass">
                         <option value="-9">{{T1511}}</option>
-                        <option value="{{sa5t-1}}">{{T1519}}</option>
-                        <option value="{{sa5t-2}}">{{T1520}}</option>
-                        <option value="{{sa5t-3}}">{{T1521}}</option>
-                        <option value="{{sa5t-4}}">{{T1522}}</option>
-                        <option value="{{sa5t-5}}">{{T1523}}</option>
-                        <option value="{{sa5t-6}}">{{T1524}}</option>
-                        <option value="{{sa5t-7}}">{{T1525}}</option>
-                        <option value="{{sa5t-8}}">{{T1526}}</option>
-                        <option value="{{sa5t-9}}">{{T1527}}</option>
-                        <option value="{{sa5t-10}}">{{T1528}}</option>
-                        <option value="{{sa5t-11}}">{{T1529}}</option>
-                        <option value="{{sa5t-12}}">{{T1530}}</option>
-                        <option value="{{sa5t-13}}">{{T1531}}</option>
-                        <option value="{{sa5t-14}}">{{T1532}}</option>
-                        <option value="{{sa5t-15}}">{{T1533}}</option>
-                        <option value="{{sa5t-16}}">{{T1534}}</option>
-                        <option value="{{sa5t-17}}">{{T1535}}</option>
-                        <option value="{{sa5t-18}}">{{T1536}}</option>
-                        <option value="{{sa5t-19}}">{{T1537}}</option>
-                        <option value="{{sa5t-20}}">{{T1538}}</option>
-                        <option value="{{sa5t-21}}">{{T1539}}</option>
+                        <optgroup label="{{T1571}}:">
+                            <option value="{{sa5t-1}}">{{T1519}}</option>
+                            <option value="{{sa5t-2}}">{{T1520}}</option>
+                            <option value="{{sa5t-3}}">{{T1521}}</option>
+                            <option value="{{sa5t-4}}">{{T1522}}</option>
+                            <option value="{{sa5t-5}}">{{T1523}}</option>
+                            <option value="{{sa5t-6}}">{{T1524}}</option>
+                            <option value="{{sa5t-7}}">{{T1525}}</option>
+                        </optgroup>
+                        <optgroup label="{{T1572}}:">
+                            <option value="{{sa5t-8}}">{{T1526}}</option>
+                            <option value="{{sa5t-9}}">{{T1527}}</option>
+                            <option value="{{sa5t-10}}">{{T1528}}</option>
+                            <option value="{{sa5t-11}}">{{T1529}}</option>
+                            <option value="{{sa5t-12}}">{{T1530}}</option>
+                            <option value="{{sa5t-13}}">{{T1531}}</option>
+                            <option value="{{sa5t-14}}">{{T1532}}</option>
+                            <option value="{{sa5t-15}}">{{T1533}}</option>
+                        </optgroup>
+                        <optgroup label="{{T1573}}:">
+                            <option value="{{sa5t-16}}">{{T1534}}</option>
+                            <option value="{{sa5t-17}}">{{T1535}}</option>
+                            <option value="{{sa5t-18}}">{{T1536}}</option>
+                            <option value="{{sa5t-19}}">{{T1537}}</option>
+                            <option value="{{sa5t-20}}">{{T1538}}</option>
+                            <option value="{{sa5t-21}}">{{T1539}}</option>
+                        </optgroup>
                     </select>
                 </div>
             </div>
@@ -3322,11 +3327,11 @@
             </div>
 
             <div class="divclass mt-6">
-                <div>{{T0774}}<small class="mb-1 smallclass">{{T1498}}</small></div>
+                <div>{{T0774}}</div>
                 <div>
                     <select id="qeduc2b" name="qeduc2b" class="selectclass">
                         <option value="-9">{{T1511}}</option>
-                        <option value="0">0</option>
+                        <option value="0">{{T1498}}</option>
                         <option value="1">1</option>
                         <option value="2">2</option>
                         <option value="3">3</option>
@@ -5199,7 +5204,7 @@
             </div>
 
             <div class="divclass mt-10">
-                <div>{{T1167}}. {{T1168}}</div>
+                <div>{{T1567}}. {{T1568}}</div>
                 <div class="col-span-1 flex items-center gap-4">
                     <div class="flex items-center">
                         <input type="radio" id="lk22_12-1" name="lk22_12" value="{{lk22_12-1}}" class="valueclass">
@@ -5389,7 +5394,7 @@
             <h2 class="h2class">{{T1185}}</h2>
 
             <div class="divclass mt-10">
-                <div class="ml-3">{{T1186}}. {{T1187}}<small class="smallclass">{{T1188}}</small></div>
+                <div>{{T1186}}. {{T1187}}<small class="smallclass">{{T1188}}</small></div>
                 <div class="col-span-1 flex items-center gap-4">
                     <div class="flex items-center">
                         <input type="radio" id="edk0-1" name="edk0" value="{{edk0-1}}" class="valueclass">
@@ -5403,7 +5408,7 @@
             </div>
 
             <div class="divclass mt-10">
-                <div class="ml-3">{{T1192}}. {{T1193}}</div>
+                <div>{{T1192}}. {{T1193}}</div>
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
                         <input type="radio" id="edk1-1" name="edk1" value="{{edk1-1}}" class="valueclass">
@@ -5425,7 +5430,7 @@
             </div>
 
             <div class="divclass mt-10">
-                <div class="ml-3">{{T1198}}. {{T1199}}</div>
+                <div>{{T1198}}. {{T1199}}</div>
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
                         <input type="radio" id="edk2-0" name="edk2" value="{{edk2-1}}" class="valueclass">
@@ -5451,11 +5456,11 @@
             </div>
 
             <div class="divclass mt-10">
-                <div>{{T1206}}. {{T1207}}<small class="smallclass">{{T1498}}</small></div>
+                <div>{{T1206}}. {{T1207}}</div>
                 <div>
                     <select id="edk3" name="edk3" class="selectclass">
                         <option value="-9">{{T1511}}</option>
-                        <option value="0">0</option>
+                        <option value="0">{{T1498}}</option>
                         <option value="1">1</option>
                         <option value="2">2</option>
                         <option value="3">3</option>
