--- a/src/templates/R/05a_tqyp.html
+++ b/src/templates/R/05a_tqyp.html
@@ -400,7 +400,7 @@
             <div class="divclass mt-6">
                 <div>{{T0090}}. {{T0091}}</div>
                 <div class="flex gap-4">
-                    <textarea id="cr10" name="cr10" class="inputclass w-full"></textarea>
+                    <textarea id="obs" name="obs" class="inputclass w-full"></textarea>
                 </div>
             </div>
 
