--- a/src/templates/R/05a_tqyp.html
+++ b/src/templates/R/05a_tqyp.html
@@ -94,6 +94,8 @@
                             <option value="{{str4-8}}">{{T0022}}</option>
                             <option value="{{str4-9}}">{{T0023}}</option>
                             <option value="{{str4-10}}">{{T0024}}</option>
+                            <option value="{{str4-11}}">{{T0092}}</option>
+                            <option value="{{str4-12}}">{{T0093}}</option>
                         </optgroup>
                     </select>
                 </div>
@@ -186,11 +188,11 @@
                 <div class="col-span-1">PTR3. {{T0040}}</div>
                 <div class="col-span-1 flex gap-4">
                     <div class="flex items-center">
-                        <input id="ptr3-1" type="radio" value="{{ptr3-1}}" name="ptr3" class="valueclass">
+                        <input id="ptr3-1" type="radio" value="{{ptr3-1}}" name="ptr3" class="valueclass" />
                         <label for="ptr3-1" class="labelclass">{{T0041}}</label>
                     </div>
                     <div class="flex items-center">
-                        <input id="ptr3-2" type="radio" value="{{ptr3-2}}" name="ptr3" class="valueclass">
+                        <input id="ptr3-2" type="radio" value="{{ptr3-2}}" name="ptr3" class="valueclass" />
                         <label for="ptr3-2" class="labelclass">{{T0042}}</label>
                     </div>
                 </div>
@@ -259,39 +261,39 @@
                 <div class="col-span-1">PTR7. {{T0053}}</div>
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
-                        <input id="ptr7-1" type="radio" value="{{ptr7-1}}" name="ptr7" class="valueclass">
+                        <input id="ptr7-1" type="radio" value="{{ptr7-1}}" name="ptr7" class="valueclass" />
                         <label for="ptr7-1" class="labelclass">{{T0054}}</label>
                     </div>
                     <div class="flex items-center">
-                        <input id="ptr7-2" type="radio" value="{{ptr7-2}}" name="ptr7" class="valueclass">
+                        <input id="ptr7-2" type="radio" value="{{ptr7-2}}" name="ptr7" class="valueclass" />
                         <label for="ptr7-2" class="labelclass">{{T0055}}</label>
                     </div>
                     <div class="flex items-center">
-                        <input id="ptr7-3" type="radio" value="{{ptr7-3}}" name="ptr7" class="valueclass">
+                        <input id="ptr7-3" type="radio" value="{{ptr7-3}}" name="ptr7" class="valueclass" />
                         <label for="ptr7-3" class="labelclass">{{T0056}}e alternative
                             care </label>
                     </div>
                     <div class="flex items-center">
-                        <input id="ptr7-4" type="radio" value="{{ptr7-4}}" name="ptr7" class="valueclass">
+                        <input id="ptr7-4" type="radio" value="{{ptr7-4}}" name="ptr7" class="valueclass" />
                         <label for="ptr7-4" class="labelclass">{{T0057}}</label>
                     </div>
                     <div class="flex items-center">
-                        <input id="ptr7-5" type="radio" value="{{ptr7-5}}" name="ptr7" class="valueclass">
+                        <input id="ptr7-5" type="radio" value="{{ptr7-5}}" name="ptr7" class="valueclass" />
                         <label for="ptr7-5" class="labelclass">{{T0058}}</label>
                     </div>
                     <div class="flex items-center">
-                        <input id="ptr7-6" type="radio" value="{{ptr7-6}}" name="ptr7" class="valueclass">
+                        <input id="ptr7-6" type="radio" value="{{ptr7-6}}" name="ptr7" class="valueclass" />
                         <label for="ptr7-6" class="labelclass">{{T0059}}</label>
                     </div>
                     <div class="flex items-center">
-                        <input id="ptr7-7" type="radio" value="{{ptr7-7}}" name="ptr7" class="valueclass">
+                        <input id="ptr7-7" type="radio" value="{{ptr7-7}}" name="ptr7" class="valueclass" />
                         <label for="ptr7-7" class="labelclass">{{T0060}}</label>
                     </div>
                     <div class="flex items-center">
                         <input type="text" id="ptr7_other" name="ptr7_other" class="inputclass w-full" />
                     </div>
                     <div class="flex items-center">
-                        <input id="ptr7-8" type="radio" value="{{ptr7-8}}" name="ptr7" class="valueclass">
+                        <input id="ptr7-8" type="radio" value="{{ptr7-8}}" name="ptr7" class="valueclass" />
                         <label for="ptr7-8" class="labelclass">{{T0061}}</label>
                     </div>
                 </div>
@@ -301,30 +303,30 @@
                 <div class="col-span-1">PTR8. {{T0062}}</div>
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
-                        <input id="ptr8-1" type="radio" value="{{ptr8-1}}" name="ptr8" class="valueclass">
+                        <input id="ptr8-1" type="radio" value="{{ptr8-1}}" name="ptr8" class="valueclass" />
                         <label for="ptr8-1" class="labelclass">{{T0063}}</label>
                     </div>
                     <div class="flex items-center">
-                        <input id="ptr8-2" type="radio" value="{{ptr8-2}}" name="ptr8" class="valueclass">
+                        <input id="ptr8-2" type="radio" value="{{ptr8-2}}" name="ptr8" class="valueclass" />
                         <label for="ptr8-2" class="labelclass">{{T0064}}</label>
                     </div>
                     <div class="flex items-center">
-                        <input id="ptr8-3" type="radio" value="{{ptr8-3}}" name="ptr8" class="valueclass">
+                        <input id="ptr8-3" type="radio" value="{{ptr8-3}}" name="ptr8" class="valueclass" />
                         <label for="ptr8-3" class="labelclass">{{T0065}}</label>
                     </div>
                     <div class="flex items-center">
-                        <input id="ptr8-4" type="radio" value="{{ptr8-4}}" name="ptr8" class="valueclass">
+                        <input id="ptr8-4" type="radio" value="{{ptr8-4}}" name="ptr8" class="valueclass" />
                         <label for="ptr8-4" class="labelclass">{{T0066}}</label>
                     </div>
                     <div class="flex items-center">
-                        <input id="ptr8-5" type="radio" value="{{ptr8-5}}" name="ptr8" class="valueclass">
+                        <input id="ptr8-5" type="radio" value="{{ptr8-5}}" name="ptr8" class="valueclass" />
                         <label for="ptr8-5" class="labelclass">{{T0067}}</label>
                     </div>
                     <div class="flex items-center">
                         <input type="text" id="ptr8_other" name="ptr8_other" class="inputclass w-full" />
                     </div>
                     <div class="flex items-center">
-                        <input id="ptr8-6" type="radio" value="{{ptr8-6}}" name="ptr8" class="valueclass">
+                        <input id="ptr8-6" type="radio" value="{{ptr8-6}}" name="ptr8" class="valueclass" />
                         <label for="ptr8-6" class="labelclass">{{T0068}}</label>
                     </div>
                 </div>
