--- a/src/templates/R/06_dsee.html
+++ b/src/templates/R/06_dsee.html
@@ -91,12 +91,6 @@
                     <input type="text" id="i3" name="i3" class="inputclass w-full" />
                 </div>
             </div>
-            <div class="divclass mt-4">
-                <div>{{T0030}}. {{T0031}}</div>
-                <div>
-                    <input type="text" id="i4" name="i4" class="inputclass w-full" />
-                </div>
-            </div>
 
             <div class="grid grid-cols-2 gap-4 mt-4">
                 <div>{{T0032}}. {{T0033}}</div>
@@ -131,20 +125,25 @@
                 <div>
                     <select id="i9" name="i9" class="selectclass">
                         <option value="--" selected>--</option>
-                        <option value="{{i9-1}}">{{T0188}}</option>
-                        <option value="{{i9-2}}">{{T0189}}</option>
-                        <option value="{{i9-3}}">{{T0190}}</option>
-                        <option value="{{i9-4}}">{{T0191}}</option>
-                        <option value="{{i9-5}}">{{T0192}}</option>
-                        <option value="{{i9-6}}">{{T0193}}</option>
-                        <option value="{{i9-7}}">{{T0194}}</option>
+                        <option value="{{i9-1}}">{{T0044}}</option>
+                        <option value="{{i9-2}}">{{T0045}}</option>
+                        <option value="{{i9-3}}">{{T0046}}</option>
+                        <option value="{{i9-4}}">{{T0047}}</option>
+                        <option value="{{i9-5}}">{{T0049}}</option>
+                        <option value="{{i9-6}}">{{T0050}}</option>
+                        <option value="{{i9-7}}">{{T0051}}</option>
+                        <option value="{{i9-8}}">{{T0052}}</option>
+                        <option value="{{i9-9}}">{{T0053}}</option>
+                        <option value="{{i9-10}}">{{T0054}}</option>
+                        <option value="{{i9-11}}">{{T0199}}</option>
+                        <option value="{{i9-12}}">{{T0200}}</option>
                     </select>
                 </div>
             </div>
 
             <h2 class="mt-10 mb-4 text-xl font-medium text-gray-700">{{T0055}}</h2>
             <div class="grid grid-cols-3 gap-4 items-center mt-4">
-                <div class="col-span-2">{{T0056}}. {{T0057}}</div>
+                <div class="col-span-2">{{T0056}}. {{T0057}} <small class="smallclass">{{T0196}}</small></div>
                 <div class="col-span-1">
                     <input type="text" id="tnr0" name="tnr0" class="inputclass w-full" />
                 </div>
@@ -153,11 +152,11 @@
                 <div class="col-span-2">{{T0058}}. {{T0059}}</div>
                 <div class="col-span-1 flex gap-4">
                     <div class="flex items-center">
-                        <input id="net1-1" type="radio" value="{{net1-1}}" name="net1" class="valueclass">
+                        <input id="net1-1" type="radio" value="{{net1-1}}" name="net1" class="valueclass" />
                         <label for="net1-1" class="labelclass font-medium">{{T0060}}</label>
                     </div>
                     <div class="flex items-center">
-                        <input id="net1-2" type="radio" value="{{net1-2}}" name="net1" class="valueclass">
+                        <input id="net1-2" type="radio" value="{{net1-2}}" name="net1" class="valueclass" />
                         <label for="net1-2" class="labelclass font-medium">{{T0061}}</label>
                     </div>
                 </div>
@@ -240,13 +239,13 @@
                             <small class="italic">{{T0079}}</small>
                         </td>
                         <td class="p-2 text-center">
-                            <input type="text" id="tnet_b" name="tnet_b" readonly class="readonly" />
+                            <input type="text" id="tnet_b" name="tnet_b" readonly class="inlineblock" />
                         </td>
                         <td class="p-2 text-center">
-                            <input type="text" id="tnet_g" name="tnet_g" readonly class="readonly" />
+                            <input type="text" id="tnet_g" name="tnet_g" readonly class="inlineblock" />
                         </td>
                         <td class="p-2 text-center">
-                            <input type="text" id="tnet_t" name="tnet_t" readonly class="readonly" />
+                            <input type="text" id="tnet_t" name="tnet_t" readonly class="inlineblock" />
                         </td>
                     </tr>
                 </tbody>
@@ -304,13 +303,13 @@
                             <small class="italic">{{T0092}}</small>
                         </td>
                         <td class="p-2 text-center">
-                            <input type="text" id="nest_b" name="nest_b" readonly class="readonly" />
+                            <input type="text" id="nest_b" name="nest_b" readonly class="inlineblock" />
                         </td>
                         <td class="p-2 text-center">
-                            <input type="text" id="nest_g" name="nest_g" readonly class="readonly" />
+                            <input type="text" id="nest_g" name="nest_g" readonly class="inlineblock" />
                         </td>
                         <td class="p-2 text-center">
-                            <input type="text" id="nest_t" name="nest_t" readonly class="readonly" />
+                            <input type="text" id="nest_t" name="nest_t" readonly class="inlineblock" />
                         </td>
                     </tr>
                 </tbody>
@@ -429,13 +428,13 @@
                             <small class="italic">{{T0115}}</small>
                         </td>
                         <td class="p-2 text-center">
-                            <input type="text" id="neo_b" name="neo_b" readonly class="readonly" />
+                            <input type="text" id="neo_b" name="neo_b" readonly class="inlineblock" />
                         </td>
                         <td class="p-2 text-center">
-                            <input type="text" id="neo_g" name="neo_g" readonly class="readonly" />
+                            <input type="text" id="neo_g" name="neo_g" readonly class="inlineblock" />
                         </td>
                         <td class="p-2 text-center">
-                            <input type="text" id="neo_t" name="neo_t" readonly class="readonly" />
+                            <input type="text" id="neo_t" name="neo_t" readonly class="inlineblock" />
                         </td>
                     </tr>
                 </tbody>
@@ -445,11 +444,11 @@
                 <div class="col-span-2">{{T0116}}. {{T0117}}</div>
                 <div class="col-span-1 flex gap-4">
                     <div class="flex items-center">
-                        <input id="nex1-1" type="radio" value="{{nex1-1}}" name="nex1" class="valueclass">
+                        <input id="nex1-1" type="radio" value="{{nex1-1}}" name="nex1" class="valueclass" />
                         <label for="nex1-1" class="labelclass font-medium">{{T0118}}</label>
                     </div>
                     <div class="flex items-center">
-                        <input id="nex1-2" type="radio" value="{{nex1-2}}" name="nex1" class="valueclass">
+                        <input id="nex1-2" type="radio" value="{{nex1-2}}" name="nex1" class="valueclass" />
                         <label for="nex1-2" class="labelclass font-medium">{{T0119}}</label>
                     </div>
                 </div>
@@ -545,13 +544,13 @@
                             <small class="italic">{{T0138}}</small>
                         </td>
                         <td class="p-2 text-center">
-                            <input type="text" id="next_b" name="next_b" readonly class="readonly" />
+                            <input type="text" id="next_b" name="next_b" readonly class="inlineblock" />
                         </td>
                         <td class="p-2 text-center">
-                            <input type="text" id="next_g" name="next_g" readonly class="readonly" />
+                            <input type="text" id="next_g" name="next_g" readonly class="inlineblock" />
                         </td>
                         <td class="p-2 text-center">
-                            <input type="text" id="next_t" name="next_t" readonly class="readonly" />
+                            <input type="text" id="next_t" name="next_t" readonly class="inlineblock" />
                         </td>
                     </tr>
                 </tbody>
@@ -622,13 +621,13 @@
                             <small class="italic">{{T0153}}</small>
                         </td>
                         <td class="p-2 text-center">
-                            <input type="text" id="eost_b" name="eost_b" readonly class="readonly" />
+                            <input type="text" id="eost_b" name="eost_b" readonly class="inlineblock" />
                         </td>
                         <td class="p-2 text-center">
-                            <input type="text" id="eost_g" name="eost_g" readonly class="readonly" />
+                            <input type="text" id="eost_g" name="eost_g" readonly class="inlineblock" />
                         </td>
                         <td class="p-2 text-center">
-                            <input type="text" id="eost_t" name="eost_t" readonly class="readonly" />
+                            <input type="text" id="eost_t" name="eost_t" readonly class="inlineblock" />
                         </td>
                     </tr>
                 </tbody>
@@ -746,13 +745,13 @@
                             <p class="block">{{T0174}}. {{T0175}}</p>
                         </td>
                         <td class="p-2 text-center">
-                            <input type="text" id="extt_b" name="extt_b" readonly class="readonly" />
+                            <input type="text" id="extt_b" name="extt_b" readonly class="inlineblock" />
                         </td>
                         <td class="p-2 text-center">
-                            <input type="text" id="extt_g" name="extt_g" readonly class="readonly" />
+                            <input type="text" id="extt_g" name="extt_g" readonly class="inlineblock" />
                         </td>
                         <td class="p-2 text-center">
-                            <input type="text" id="extt_t" name="extt_t" readonly class="readonly" />
+                            <input type="text" id="extt_t" name="extt_t" readonly class="inlineblock" />
                         </td>
                     </tr>
                 </tbody>
@@ -810,13 +809,13 @@
                             <p class="block">{{T0186}}. {{T0187}}</p>
                         </td>
                         <td class="p-2 text-center">
-                            <input type="text" id="tnr1_b" name="tnr1_b" readonly class="readonly" />
+                            <input type="text" id="tnr1_b" name="tnr1_b" readonly class="inlineblock" />
                         </td>
                         <td class="p-2 text-center">
-                            <input type="text" id="tnr1_g" name="tnr1_g" readonly class="readonly" />
+                            <input type="text" id="tnr1_g" name="tnr1_g" readonly class="inlineblock" />
                         </td>
                         <td class="p-2 text-center">
-                            <input type="text" id="tnr1_t" name="tnr1_t" readonly class="readonly" />
+                            <input type="text" id="tnr1_t" name="tnr1_t" readonly class="inlineblock" />
                         </td>
                     </tr>
                 </tbody>
